# ws-notifier

./: .gitignore  .gitpod.yml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: const.py  deps.py  endpoint.py  handler.py  main.py  middleware.py  service.py  setting.py
nginx/: default.conf
